# mcp-ops-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
data/: crm.json
docs/: google_retail_ce_packet.md  native-cloud-validation.md  portfolio-claim-map.md
mcp_servers/: customer_lookup.py  draft_email.py  send_email.py  ticket_create.py
scripts/: demo-error-path.sh  demo.sh
src/: config.py  logging_utils.py  orchestrator.py  run.py
tests/: test_tool_servers.py
