[project]
name = "mcp-ops-orchestrator"
version = "0.1.0"
description = "Multi-agent ops orchestrator: Claude drives 3 MCP tools to handle shipment-exception workflows"
requires-python = ">=3.11,<3.13"
dependencies = [
    "anthropic>=0.40.0",
    "mcp>=1.2.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "mcp_servers"]
